welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:2: error: stable identifier required, but nums.length found.
	var nums.length : Int =0
                 ^indexOfValue:7: error: type mismatch;
 found   : Unit
 required: Int
	if((nums.length)!=0){
        ^